# ReminderBot

./: .env.example  .gitignore  pyproject.toml
app/: __init__.py  __main__.py
app/database/: __init__.py  admin.py  admins.py  database.py  models.py  reminder.py  reminders.py  user.py  users.py
app/dialogs/: __init__.py
app/dialogs/admin/: __init__.py  admin_add.py  admins.py
app/dialogs/widgets/: __init__.py  close_button.py  i18n.py
app/handlers/: __init__.py  admin.py  language.py  locale.py  start.py
app/handlers/admin/: __init__.py  admin.py  admin_add.py  admins.py
app/handlers/user/: __init__.py  locale.py  start.py
app/locales/en/LC_MESSAGES/: bot.ftl
app/locales/ru/LC_MESSAGES/: bot.ftl
app/middlewares/: __init__.py  admin.py  database.py  user.py
app/states/: __init__.py  admin_add.py  admins.py
app/utils/: __init__.py  dialog.py  i18n_format.py  keyboards.py  language.py  locale.py  manager.py  states.py
handlers/: start.py
