[project]
name = "reminderbot"
version = "0.1.0"
description = "A bot which helps you with your schedule"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "aiogram-i18n>=1.4",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "cachetools==5.5.2",
    "dotenv>=0.9.9",
    "fluent-runtime>=0.4.0",
    "sqlalchemy>=2.0.41",
]
